[package]
name = "aeonia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
chrono = "0.4.38"
p256 = { version = "0.11", features = ["pem"] }
rand_core = "0.6.4"
ripemd = "0.1.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
